--- a/css/styles.css
+++ b/css/styles.css
@@ -15,4 +15,21 @@ h2 {
   margin-bottom: 10px;
 }
 
+.genero {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
 
+.pelicula {
+    width: 200px;
+}
+
+.pelicula img {
+    width: 200px;
+}
+
+.pelicula h2 {
+    font-size: 16px;
+    font-weight: bold;
+}
