--- a/css/styles.css
+++ b/css/styles.css
@@ -15,9 +15,11 @@ h2 {
   margin-bottom: 10px;
 }
 
+/* Mis estilos */
 .genero {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 20px;
 }
 
@@ -29,7 +31,7 @@ h2 {
     width: 200px;
 }
 
-.pelicula h2 {
+.pelicula h3 {
     font-size: 16px;
     font-weight: bold;
 }
